Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,5p,times,twocolumn,authoryear]{elsarticle}
+\documentclass[preprint,5p,times,twocolumn,authoryear,draft]{elsarticle}
 
 \usepackage{amssymb,amsmath,bbm}
 \usepackage{url}
