--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -137,17 +137,13 @@ Fig. 1: \textbf{Effects of clustering of forbidden cells on the number of commun
 
 	
 	% 5. Line 228: Please explain why the median was chosen. Especially given that you use an L2 norm and variances in the index
-    %\comment[JR]{je pensais qu'on prenait la moyenne ? je verifie... ligne 175 on écrit la médiane en effet}
-	%\comment[CC]{ça doit être moi parce que je pensais qu'on prenait effectivement la médiane, qui est plus robuste aux extrêmes, mais si c'est la moyenne et que ça reste proche entre différentes réplications why not.}[(JR) il me semble que les distribs sont assez centrées et que ca revient quasiment au même ; par contre Clem si tu as pris median pour les stats et moi mean pour les plots c'est pas fou ; tu as encore le code des analyses stats ? (c'est sur le git ?)]
-	%\comment[JR]{c'est la merde, on prend certaines fois la mediane et certaines fois la moyenne...}
-    %\comment[FL]{certes c'est pas fou mais ca peut se défendre en disant que la médiane sert pour communiquer de façon accessible, sur une dimension pour laquelle c'était pertinent, mais que de façon générique on a préféré travailler sur la loi de Gauss car tout le monde à en tête ces indicateurs moyenne / ecartype c'est plus "passe partout"? }
-
+    \item There was a mistake in the writing, as we never use the median but always the mean, which as you recall is consistent with the choice of distance we made. This was corrected in the paper.
 	
 	% 6. Line 232: comparing phase diagrams is related to the topic of comparing patterns. It would make sense to mention the methods that are usually used to compare patterns
-	\item \comment[JR]{biblio a rajouter}
+	\item Some general references on comparing patterns were added.
 	
 	% 7. Line 238: Please explain why this particular index was chosen and discuss its properties. Connect the discussion to other indices like L1, and Linf norms, etc. Would we get qualitatively different results from different indices? 
-	\item The approach proposed in the paper is indeed rather exploratory. This explains why we have chosen to focus on a single index (L2) as this index is relatively well-known in the community. Previous exploratory analyses have shown that the results were rather stable when using the Monge method. Adapting the mathematical aggregator to the different indices would constitute an interesting perspective, but is out of the scope of the paper which already focuses on two models and proposes a new framework for analysing the impact of initial pattern parameters.
+	\item The approach proposed in the paper is indeed rather exploratory. This explains why we have chosen to focus on a single index (L2) as this index is relatively well-known in the community. Previous exploratory analyses have shown that the results were rather stable when using the Monge method. Adapting the mathematical aggregator to the different indices would constitute an interesting perspective, but is out of the scope of the paper which already focuses on two models and proposes a new framework for analysing the impact of initial pattern parameters. We added a supplementary material showing the distances obtained with other distances, which are similar to the results in main text.
 	
 	% 8. Regarding the spatial generator: the authors should explain why this generator is relevant to these two models? 
 	\item This spatial generator is relevant to both model as it produces density grids at a ``metropolitan scale'' (see detailed discussion added in Appendix and the original paper from which we used the generator), which is the scale at which both model were initially intended to be. We made this aspect more explicit. 
@@ -207,7 +203,8 @@ Concerning the comments made by the second referee:
 	\item The functionalities of OpenMOLE we used were detailed in the article; we did not use genetic algorithms but sampling methods and high performance computing environments.
 	
 	% In section 3.1, page 8, line 404-405 the authors mention that the distance of the phase diagrams was measured with respect to the reference phase diagram computed on the default initial spatial conditions. Actually this came as a surprise to me. I had the impression that all phase diagrams would be evaluated against all other diagrams. Perhaps this should be explained earlier in the paper.
-	\item \comment[JR]{ce qu'il suggère c'est un indice intégré sur l'ensemble des phases diagramme, donc un ``meta-meta-indice'' en quelque sorte, nous on reste à un niveau de meta seulement car on regarde juste pour chaque s'il bouge par rapport à un point de reference. En termes thematique c'est plus coherent pour nous, lui doit avoir en tete des indices de sensibilite globaux type Saltelli. $\rightarrow$ a voir comment justifier ca bien}{(JR) inclure en mise en contexte ce lien avec les Saltelli et indexes globaux}\comment[FL]{oui je trouve qu'on a le droit de rester limiter à cela c'est déjà pas mal!}
+	\item Concerning the measure of the distance of all phase diagram to one reference phase diagram, this choice was made as we preferred having a local sensitivity index for which the distribution can be studied, rather than a global completely integrated sensitivity index (similar to Saltelli or Morris indexes for example). This was explained better in the paper.
+ 
 	
 	% Figure 4 and 5: I find it confusing that the green color indicates higher distance values and the red color indicates lower values. I think this should be reversed.
     \item The double color progression in Fig 4 and 5 is used to highlight the opposition between ratio values above/under 1 but is not meant to introduce any hierarchy in the interpretation. We reversed the order of colors according to your remark.
@@ -241,8 +238,7 @@ Concerning the comments made by the third referee:
 
 
 	% You write “To our knowledge there exist no single well established method to compare phase diagrams in the agent-based modelling and geosimulation literature.” As this is new you may want to discuss how say its done in other fields?  
-	\item 
-%    \comment[JR]{cf remarques other reviewers sur ce point}[(MLT) Sa remarque fait sens, mais j'avoue ne pas être trop au point sur cette partie de la littérature... vous avez des références?][(JR)concernant la spatial sensitivity : justement c'est pas trop fait non plus dans les autres champs ! je parlais avec un ecologue, leur espace est jamais varié autre que donnees reelles ; j'ai l'impressions que geosciences, hydrologie etc idem. Pour comparer phase diagrams j'ai pas en tete de domaine ou ca se ferait (faute d'avoir cherché, justement quand on cherchait une methode) - le plus proche c'est les patterns comparison etc. comme l'on suggere les reviewers.]
+	\item We do not have knowledge of examples in which the comparison of patterns or fields is called ``phase diagram comparison'', and we neither have knowledge of such work in physics for example, from which the term originated. There is naturally all the literature we cited on similar issues in other domains, and the extension of the discussion gives elements of answer to this point.
 	
 	% In the Schelling and sugarscape models how are the initial population of agents distributed? Is it random? I ask as this is unclear in the current version of the paper but it is vital if your purpose is to explore how the initial spatial configuration impacts the results of the model. Should the agents not be all located at the same location for each run to rule out the impact of initial placement of agents on the resulting patterns? This is something that is not addressed in the paper. I know for example, the Schelling model in NetLogo normally places the agents at random locations but in your reimplementation how is this done? The same goes for the sugarscape model in NetLogo. I believe a clearer description of the model initialization would be good and how its not the initial random placement of agents but the actual environment that impacts the outcomes. Maybe this was explained in the paper but I missed it.  
 	\item Yes, classically, the initial distribution of agents is random in both models and, most importantly for our point, it follows a uniform distribution of density. In our implementation, the initial location of agents is also random in Schelling, but it follows a distribution of density given by the generated grid. In Sugarscape, the agents are initialised at random but the resources follow a distribution of density given by the generated grid. We have clarified this point in section 2.3
