--- a/paper.tex
+++ b/paper.tex
@@ -165,7 +165,7 @@ The general method workflow of our method is illustrated in Figure \ref{fig:meth
 %%%%%%%%%%%%%%%%%%%%%%
 
 
-In order to test the influence of initial spatial conditions on model outputs, we use a systematic method to compare \emph{phase diagrams}. Following \citet{Gauvinetal2009}, we define a phase diagram as the vector of final aggregated model outputs considered as a function of model parameters. We have as many phase diagrams than we have spatial grids, which makes a qualitative visual comparison not realistic (with around 50 different spatial configurations for each model experiment). A solution is to use systematic quantitative procedures to compare them \added{to a reference case}. Technically, because of stochasticity, we represent the output of the model for a given combination of parameter values $\vec{P}$ as the median \added{?} of the final values of an output indicator $O$ obtained for the replications of the model initialized with $\vec{P}$.\\
+In order to test the influence of initial spatial conditions on model outputs, we use a systematic method to compare \emph{phase diagrams}. Following \citet{Gauvinetal2009}, we define a phase diagram as the vector of final aggregated model outputs considered as a function of model parameters. We have as many phase diagrams than we have spatial grids, which makes a qualitative visual comparison not realistic (with around 50 different spatial configurations for each model experiment). A solution is to use systematic quantitative procedures to compare them \added{to a reference case}. Technically, because of stochasticity, we represent the output of the model for a given combination of parameter values $\vec{P}$ as the \replaced{mean}{median} of the final values of an output indicator $O$ obtained for the replications of the model initialized with $\vec{P}$.\\
 
 To our knowledge there exists no single well established method to compare phase diagrams in the agent-based modelling and geosimulation literature. We introduce a measure of the relative distance $d_r$ between two phase diagrams $\mu_{\vec{\alpha}_1}$ and $\mu_{\vec{\alpha}_2}$. Phase diagrams are denoted by \replaced{the same}{a common} function $\mu$ indexed by \replaced{the generator parameters}{what we call \emph{meta-parameters}} $\vec{\alpha}$, \replaced{which}{that} capture the spatial configuration \added{(in practice these can be parameters of an upstream model to generate the configuration, or a description of the configuration itself)}. The $d_r$ measure is taken as the share of between-diagrams variability relative to their internal variability, given formally in the case of a one-dimensional phase diagram by
 
@@ -174,7 +174,7 @@ To our knowledge there exists no single well established method to compare phase
 d_r\left(\mu_{\vec{\alpha}_1},\mu_{\vec{\alpha}_2}\right) = 2 \cdot \frac{d(\mu_{\vec{\alpha}_1},\mu_{\vec{\alpha}_2})^2}{Var\left[\mu_{\vec{\alpha}_1}\right] + Var\left[\mu_{\vec{\alpha}_2}\right]}
 \end{equation}
 
-where $\mu_{\vec{\alpha}_i}$ are the phase diagrams at given \replaced{generator}{meta-} parameters $\vec{\alpha}_i$. $d$ is a functional distance that we take simply as Euclidean distance. The internal variabilities are estimated as the variance within each phase diagram $f_{\vec{\alpha_i}}$. For a multi-dimensional phase diagram, we \replaced{average}{sum} these relative distances over the components. 
+where $\mu_{\vec{\alpha}_i}$ are the phase diagrams at given \replaced{generator}{meta-} parameters $\vec{\alpha}_i$. $d$ is a functional distance that we take simply as Euclidean distance. The internal variabilities are estimated as the variance within each phase diagram $f_{\vec{\alpha_i}}$. For a multi-dimensional phase diagram, we \replaced{average}{sum} these relative distances over the components. \added{Given a set of phase diagram to be compared, we will study the distribution of this distance to an arbitrary phase diagram for all diagrams, rather than an aggregated measure which would be similar to global sensitivity methods \citep{saltelli2008global}.}
 
 The last methodological point which we need to emphasize is the relationship between the present workflow and model exploration workflows in general. The ideas of multi-modelling and extensive model exploration are nothing from new - ~\cite{openshaw1983data} already advocated for ``model-crunching'' \added{in 1983 -}, but their effective use only begins to emerge thanks to the development of new methods and tools together with an explosion of computation capabilities. The model exploration platform OpenMOLE~\citep{reuillon2013openmole} allows to embed any model as a blackbox, to write \replaced{flexible}{modulable} exploration workflow using advanced methodologies such as genetic algorithms and to distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, this tool is a powerful way to embed both the sensitivity analysis and the \deleted{meta-}sensitivity analysis \added{to initial spatial conditions}, and to allow the coupling of any spatial generator with any model in a straightforward way as long as the model can take its spatial configuration as an input or from an input file. In this paper, we use the OpenMOLE platform for the spatial environment and the model coupling, placing ourselves in the framework of multi-modelling \citep{cottineau2015modular}. \added{We use therefore OpenMOLE's functionalities for model embedding through workflow, design of experiments (parameter sampling) and high performance environment access.}
 
@@ -229,6 +229,8 @@ For Sugarscape, we explore three dimensions of the parameter space: the total po
 
 For Schelling's model, we also explore three dimensions of the parameter space of the model: the minimum proportion of similar agents required in the neighbourhood for the agent to be satisfied (or intolerance level) $S\in \left[0;1\right]$, the initial split of population, derived from the proportion of green population, $G\in \left[0;1\right]$ and the vacancy rate of the city $V\in \left[0;1\right]$. We sample 1000 parameter values using a Sobol sampling and run 100 repetitions for each configuration. We first try the same experiment design (50 density grids generated on the fly), then look at clustered grids representing urban densities. We choose 45 different grids among the ones which are most representative of the three types of urban morphology: 15 compact grids, 15 polycentric grids and 15 discontinuous grids. The last experiment thus equates to 4,500,000 simulations (1000 parameter combinations x 45 density grids x 100 replications). We use OpenMOLE to distribute the computation, and apply segregation measures to characterise the results.
 
+\added{As detailed in supplementary material~\ref{app:convergence}, more repetitions are needed for Schelling indicators than for Sugarscape, in order to obtain a similar relative confidence in the estimation of averages. We ran for this reason a different number of replications for each model.}
+
 
 
 We choose different experiment designs, both for \replaced{generator parameters}{meta-parameters} and for the phase diagram, to demonstrate the robustness of the method to technical choices. In principle, our workflow applies \replaced{regardless of the way we}{with to manner to }generate a spatial configuration (even taking real configurations) and \replaced{the way we}{any manner to} establish phase diagrams.
@@ -246,7 +248,7 @@ We choose different experiment designs, both for \replaced{generator parameters}
 
 \subsection{Quantitative variation across grids}
 
-We measure the distance of the phase diagrams for all density grids with respect to the reference phase diagram computed on the default initial spatial condition setup (a bi-centric symmetrical non toroidal configuration) using the measure defined in equation~\ref{eq:phase-distance}. For each density grid, we obtain the average squared distance between corresponding points of the phase diagrams, i.e. the median\added{?} value of the final output measure, such as segregation or inequality, for a given value of parameters in the two setups (isotropic and generated). This average squared distance for each point is then related to the average variance of each of the phase diagram (the reference one and the one for the grid under inquiry). Therefore, values greater than 1 will mean that inter-diagram variability is more important than intra-diagram variability.
+We measure the distance of the phase diagrams for all density grids with respect to the reference phase diagram computed on the default initial spatial condition setup (a bi-centric symmetrical non toroidal configuration) using the measure defined in equation~\ref{eq:phase-distance}. For each density grid, we obtain the average squared distance between corresponding points of the phase diagrams, i.e. the \replaced{mean}{median} value of the final output measure, such as segregation or inequality, for a given value of parameters in the two setups (isotropic and generated). This average squared distance for each point is then related to the average variance of each of the phase diagram (the reference one and the one for the grid under inquiry). Therefore, values greater than 1 will mean that inter-diagram variability is more important than intra-diagram variability. \added{We tested the sensitivity to the type of distance, using a Minkovski distance with a varying exponent. The results are presented in supplementary material~\ref{app:distances}, and show a similar sensitivity to spatial initial conditions.}
 
 \paragraph{Sugarscape} 
 
@@ -432,6 +434,7 @@ After reviewing the extensive literature on spatial biases in statistical and si
 %%%%%%%%%%%%%%%%%
 \section{\added{Additional statistical analysis}}
 
+\label{app:convergence}
 
 %%%
 %% Sugarscape
@@ -463,14 +466,14 @@ After reviewing the extensive literature on spatial biases in statistical and si
 %  0.0001   0.5554   0.7782   3.2724   3.8979 121.6829 
 
 
-\added{For both models we estimate the Sharpe ratios for each indicator by $S(X) = \hat{\mathbb{E}{X}}/\hat{\sigma}(X)$ with standard estimators for average and standard deviation. The summary statistics computed on repetitions for all parameter points are given in Table~\ref{tab:summarysharpes}.}
+\added{For both models we estimate the Sharpe ratios for each indicator by $S(X) = \hat{\mathbb{E}{X}}/\hat{\sigma}(X)$ with standard estimators for average and standard deviation. The summary statistics of this ratio computed on repetitions for all parameter points are given in Table~\ref{tab:summarysharpes}. Under the assumption of a normal distribution, the width of the confidence interval at level $c$ is given by $\left|\mu_+ - \mu_-\right| = 4\cdot\sigma \sigma z_{c} \sqrt{n}$ where $\sigma$ is the standard deviation, $z_{c}$ is the quantile at which $c$ is attained by the cumulative distribution, which is around $1.96$ for a 95\% confidence interval. This means that to obtain a confidence interval of width $\kappa \cdot \sigma$, one needs a number $n \simeq (8 / \kappa )^2$ of repetitions. This gives 64 repetitions for $\kappa = 1$. As the Sharpes ratios are in general smaller for Schelling indicators than for Sugarscape, we take $n = 50$ for Sugarscape and $n = 100$ for Schelling to have s similar confidence in estimations.}
 
 
 %%%%%%%%%%%%%%
 \begin{table*}
 \caption{\added{\textbf{Summary statistics of Sharpe ratio estimated on repetitions for each parameter point.}}\label{tab:summarysharpes}}
 \centering
-	\begin{tabular}{|ccccccc|}
+	\begin{tabular}{|c|cccccc|}
 	\hline
 Model/Indicator & Min. & 1st Qu. &  Median &  Mean & 3rd Qu. & Max. \\\hline
 Sugarscape/Gini & 2.343 & 14.413 & 20.993 & 20.098 & 26.208 & 49.808\\\hline 
@@ -505,7 +508,9 @@ Schelling/Moran & 0.0001 & 0.5554 & 0.7782 & 3.2724 & 3.8979 & 121.6829\\\hline
 %%%%%%%%%%%%%%%
 \section{\added{Comparison of phase diagram with other distances}}
 
-\added{We describe here the tests done with other distances to compare phase diagrams. We tested normalized Minkovski distances, defined by $d(x,y) = \left(\frac{1}{N}\cdot \sum_i \left|x_i - y_i\right|^{q}\right)^{\frac{1}{q}}$, for varying values of $q$ from $q = 1$ (Manhattan distance) to $q = 10$, including $q = 2$ (Euclidian distance) which is used in main text.}
+\label{app:distances}
+
+\added{We describe here the tests done with other distances to compare phase diagrams. We tested normalized Minkovski distances, defined by $d(x,y) = \left(\frac{1}{N}\cdot \sum_i \left|x_i - y_i\right|^{q}\right)^{\frac{1}{q}}$, for varying values of $q$ from $q = 1$ (Manhattan distance) to $q = 10$, including $q = 2$ (Euclidian distance) which is used in main text. The Table~\ref{tab:schellingdistances} gives the summary statistics of each distance computed on all initial configurations for the Schelling model. The Table~\ref{tab:sugarscapedistances} gives the same statistics for the sugarscape model. We naturally obtain smaller difference with the Manhattan distance but which remain significant (averages of 10\% for the Schelling model and 40 \% for Sugarscape), and variabilities with higher values of the Minkovski exponent are much higher. This results confirm the high variability observed in main text with the Euclidian distance.}
 
 % Schelling
 % [1] "alpha = 1"
@@ -538,7 +543,7 @@ Schelling/Moran & 0.0001 & 0.5554 & 0.7782 & 3.2724 & 3.8979 & 121.6829\\\hline
 
 
 \begin{table*}
-	\caption{\added{\textbf{Summary statistics of different distances for schelling.}}}
+	\caption{\added{\textbf{Summary statistics of different distances for schelling.}}}\label{tab:schellingdistances}
 	\centering
 	\begin{tabular}{|ccccccc|}
 	\hline
@@ -551,7 +556,7 @@ Schelling/Moran & 0.0001 & 0.5554 & 0.7782 & 3.2724 & 3.8979 & 121.6829\\\hline
 \end{table*}
 
 \begin{table*}
-	\caption{\added{\textbf{Summary statistics of different distances for sugarscape.}}}
+	\caption{\added{\textbf{Summary statistics of different distances for sugarscape.}}}\label{tab:sugarscapedistances}
 	\centering
 	\begin{tabular}{|ccccccc|}
 	\hline
@@ -571,7 +576,7 @@ Schelling/Moran & 0.0001 & 0.5554 & 0.7782 & 3.2724 & 3.8979 & 121.6829\\\hline
 \section{\added{Pseudo-code for models}}
 \label{app:code}
 
-\added{We give below the pseudo-code for the implementations we used of both sugarscape and schelling models. We recall that source code is openly available at} \url{https://github.com/AnonymousAuthor2/SpaceMatters}.
+\added{We give below the pseudo-code for the implementations we used of both sugarscape and schelling models. We recall that source code is openly available at} \url{https://github.com/AnonymousAuthor2/SpaceMatters}. \added{The pseudo-code is in the style of NetLogo code, which is already easily readable.}
 
 
 
