--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,4 +1,13 @@
 
+@incollection{hastie2009unsupervised,
+  title={Unsupervised learning},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  booktitle={The elements of statistical learning},
+  pages={485--585},
+  year={2009},
+  publisher={Springer}
+}
+
 @book{saltelli2008global,
   title={Global sensitivity analysis: the primer},
   author={Saltelli, Andrea and Ratto, Marco and Andres, Terry and Campolongo, Francesca and Cariboni, Jessica and Gatelli, Debora and Saisana, Michaela and Tarantola, Stefano},
